# libsockets

./: Makefile  Makefile.am  README.md  client.c  configure.ac  data_file.h  global.h  server.c  sock.c  sock.h  usftp.c
examples/: client.c  server.c  usftp.c
include/: Makefile.am  global.h  sockets.h
include/libsockets/: Makefile.am
src/: Makefile.am  sockets.c
